Rename modules after review

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
 FLAGS=-g -Wall -Wextra -std=c99 -D_POSIX_SOURCE -D_GNU_SOURCE
 LIBS=
 
-searchfolder: main.c ipc.o smart_folder.o file_validator.o finder.o file_linker.o
+searchfolder: main.c ipc.o smart_folder.o parser.o validator.o finder.o linker.o
 	gcc $(FLAGS) -o searchfolder main.c *.o $(LIBS)
 
 ipc.o: ipc.c ipc.h
@@ -10,14 +10,17 @@ ipc.o: ipc.c ipc.h
 smart_folder.o: smart_folder.c smart_folder.h
 	gcc $(FLAGS) -c smart_folder.c
 
-file_validator.o: file_validator.c file_validator.h
-	gcc $(FLAGS) -c file_validator.c
+parser.o: parser.c parser.h
+	gcc $(FLAGS) -c parser.c
+
+validator.o: validator.c validator.h
+	gcc $(FLAGS) -c validator.c
 
 finder.o: finder.c finder.h
 	gcc $(FLAGS) -c finder.c
 
-file_linker.o: file_linker.c file_linker.h
-	gcc $(FLAGS) -c file_linker.c
+linker.o: linker.c linker.h
+	gcc $(FLAGS) -c linker.c
 
 clean:
 	rm *.o searchfolder
