Create logger fcts and replace printing in modules

--- a/src/makefile
+++ b/src/makefile
@@ -1,7 +1,7 @@
-FLAGS=-g -ggdb -lm -Wall -Wextra -Werror -std=c99 -D_POSIX_SOURCE -D_GNU_SOURCE
+FLAGS=-g -ggdb -lm -Wall -Wextra -Werror -std=c99 -D_POSIX_SOURCE -D_GNU_SOURCE -DDEBUG
 LIBS=
 
-searchfolder: main.c ipc.o searchfolder.o parser.o validator.o finder.o linker.o io.o
+searchfolder: main.c ipc.o searchfolder.o parser.o validator.o finder.o linker.o io.o logger.o
 	gcc $(FLAGS) -o searchfolder main.c *.o $(LIBS)
 
 ipc.o: ipc.c ipc.h
@@ -24,6 +24,9 @@ linker.o: linker.c linker.h
 
 io.o: io.c io.h
 	gcc $(FLAGS) -c io.c
+
+logger.o: logger.c logger.h
+	gcc $(FLAGS) -c logger.c
 
 clean:
 	rm *.o vendor/*.gch searchfolder
